--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "predeploy": "rm -rf node_modules && npm install",
+    "postinstall": "npm rebuild @tensorflow/tfjs-node --build-from-source"
   },
   "keywords": [],
   "author": "",
